[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/principal.gd" type="Script" id=1]
[ext_resource path="res://Art/nombre_pais.tres" type="Theme" id=2]
[ext_resource path="res://Art/nombre_capital.tres" type="Theme" id=3]
[ext_resource path="res://Art/informacion.tres" type="Theme" id=4]
[ext_resource path="res://Art/botones_opciones.tres" type="Theme" id=5]
[ext_resource path="res://Art/boton_recargar.tres" type="Theme" id=6]
[ext_resource path="res://Art/marcador.tres" type="Theme" id=7]
[ext_resource path="res://Art/error.tres" type="StyleBox" id=8]
[ext_resource path="res://Art/resultado.tres" type="Theme" id=9]
[ext_resource path="res://publicidad/publicidad.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.0823529, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0901961, 0.0823529, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 15.0
bg_color = Color( 0.0901961, 0.0823529, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 11.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.168627, 0.160784, 0.380392, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.0901961, 0.0823529, 0.333333, 1 )
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id=11]
Panel/styles/panel = SubResource( 10 )

[node name="principal" type="Node2D"]
script = ExtResource( 1 )

[node name="margin" type="PanelContainer" parent="."]
margin_right = 604.0
margin_bottom = 1227.0
custom_styles/panel = SubResource( 1 )

[node name="horizontal" type="VBoxContainer" parent="margin"]
margin_right = 604.0
margin_bottom = 1227.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="HBoxContainer" parent="margin/horizontal"]
margin_right = 604.0
margin_bottom = 150.0
alignment = 1

[node name="marginPais" type="PanelContainer" parent="margin/horizontal/container"]
margin_right = 350.0
margin_bottom = 150.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="pais" type="Label" parent="margin/horizontal/container/marginPais"]
margin_top = 51.0
margin_right = 350.0
margin_bottom = 98.0
theme = ExtResource( 2 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marginBandera" type="PanelContainer" parent="margin/horizontal/container"]
margin_left = 354.0
margin_right = 604.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )
size_flags_horizontal = 9
custom_styles/panel = SubResource( 3 )

[node name="bandera" type="TextureRect" parent="margin/horizontal/container/marginBandera"]
margin_left = 15.0
margin_right = 250.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contenedorNombreCompleto" type="PanelContainer" parent="margin/horizontal"]
margin_top = 154.0
margin_right = 604.0
margin_bottom = 234.0
rect_min_size = Vector2( 0, 80 )
custom_styles/panel = SubResource( 4 )

[node name="nombreCompleto" type="Label" parent="margin/horizontal/contenedorNombreCompleto"]
margin_left = 11.0
margin_top = 23.0
margin_right = 604.0
margin_bottom = 56.0
theme = ExtResource( 3 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contenedorBotones" type="PanelContainer" parent="margin/horizontal"]
margin_top = 238.0
margin_right = 604.0
margin_bottom = 590.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="grid" type="VBoxContainer" parent="margin/horizontal/contenedorBotones"]
margin_right = 604.0
margin_bottom = 352.0
size_flags_horizontal = 3

[node name="opcion1" type="Button" parent="margin/horizontal/contenedorBotones/grid"]
margin_right = 604.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
clip_text = true

[node name="opcion2" type="Button" parent="margin/horizontal/contenedorBotones/grid"]
margin_top = 84.0
margin_right = 604.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 90 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
clip_text = true

[node name="opcion3" type="Button" parent="margin/horizontal/contenedorBotones/grid"]
margin_top = 178.0
margin_right = 604.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
clip_text = true

[node name="opcion4" type="Button" parent="margin/horizontal/contenedorBotones/grid"]
margin_top = 262.0
margin_right = 604.0
margin_bottom = 352.0
rect_min_size = Vector2( 0, 90 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
clip_text = true

[node name="contenedorResultado" type="PanelContainer" parent="margin/horizontal"]
margin_top = 594.0
margin_right = 604.0
margin_bottom = 744.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resultado" type="Label" parent="margin/horizontal/contenedorResultado"]
margin_top = 55.0
margin_right = 604.0
margin_bottom = 95.0
theme = ExtResource( 9 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contenedorInformacion" type="PanelContainer" parent="margin/horizontal"]
margin_top = 748.0
margin_right = 604.0
margin_bottom = 818.0
custom_styles/panel = SubResource( 6 )

[node name="informacion" type="Label" parent="margin/horizontal/contenedorInformacion"]
margin_left = 15.0
margin_top = 15.0
margin_right = 589.0
margin_bottom = 55.0
theme = ExtResource( 4 )
autowrap = true

[node name="marginMarcador" type="MarginContainer" parent="."]
margin_top = 904.0
margin_right = 40.0
margin_bottom = 995.0
rect_min_size = Vector2( 0, 70 )
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="panelMarcador" type="Panel" parent="marginMarcador"]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 70 )
theme = SubResource( 11 )

[node name="marcador" type="Label" parent="marginMarcador"]
margin_left = 20.0
margin_top = 12.0
margin_right = 20.0
margin_bottom = 78.0
theme = ExtResource( 7 )
align = 1

[node name="marginSiguiente" type="MarginContainer" parent="."]
margin_right = 222.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 70 )
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="siguiente" type="Button" parent="marginSiguiente"]
margin_left = 20.0
margin_right = 202.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 85 )
theme = ExtResource( 6 )
text = "Siguiente"

[node name="publicidad" parent="." instance=ExtResource( 10 )]

[connection signal="pressed" from="margin/horizontal/contenedorBotones/grid/opcion1" to="." method="_on_opcion1_pressed"]
[connection signal="pressed" from="margin/horizontal/contenedorBotones/grid/opcion2" to="." method="_on_opcion2_pressed"]
[connection signal="pressed" from="margin/horizontal/contenedorBotones/grid/opcion3" to="." method="_on_opcion3_pressed"]
[connection signal="pressed" from="margin/horizontal/contenedorBotones/grid/opcion4" to="." method="_on_opcion4_pressed"]
[connection signal="pressed" from="marginSiguiente/siguiente" to="." method="_on_Button_pressed"]
